--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,14 @@
             <version>4.1.17.Final</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.41</version>
+        </dependency>
+
+
 
         <!-- https://mvnrepository.com/artifact/io.netty/netty-codec-http -->
         <dependency>
