--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,32 @@
         <version>1.5.7.RELEASE</version>
     </parent>
 
+    <distributionManagement>
+        <snapshotRepository>
+            <id>cardniu-nexus</id>
+            <name>feidee SNAPSHOTS</name>
+            <url>http://m.kd.ssj/nexus/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>cardniu-nexus</id>
+            <name>feedee Release</name>
+            <url>http://m.kd.ssj/nexus/content/repositories/public</url>
+        </repository>
+    </distributionManagement>
+
+    <repositories>
+        <repository>
+            <id>cardniu-nexus-snapshots</id>
+            <url>http://m.kd.ssj/nexus/content/repositories/snapshots</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>cardniu-nexus-releases</id>
+            <url>http://m.kd.ssj/nexus/content/repositories/public</url>
+        </repository>
+    </repositories>
     <dependencies>
 
         <dependency>
@@ -33,9 +59,6 @@
             <artifactId>velocity</artifactId>
             <version>1.7</version>
         </dependency>
-
-
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -72,22 +95,32 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.41</version>
         </dependency>
-
-
-
         <!-- https://mvnrepository.com/artifact/io.netty/netty-codec-http -->
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-codec-http</artifactId>
             <version>4.1.17.Final</version>
         </dependency>
-
-
-
     </dependencies>
 
     <build>
         <plugins>
+
+
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>com.hello.InitServer</mainClass>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -97,6 +130,7 @@
                     <compilerArgument>-parameters</compilerArgument>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
 
