完善用户自定义url请求处理

--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,7 @@
                     <source>1.8</source>
                     <target>1.8</target>
                     <compilerArgument>-parameters</compilerArgument>
+                    <encoding>utf-8</encoding>
                 </configuration>
             </plugin>
 
